Add dedicated Iterator and modify Collection interfaces